--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "puppeteer": "latest"
+    "puppeteer": "^21.0.0",
+    "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^21.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -75,5 +77,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "chrome-aws-lambda": "^10.1.0"
   }
 }
