--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup-puppeteer": "npx ts-node setup-puppeteer-environment.ts",
+    "test-chrome": "npx ts-node setup-puppeteer-environment.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -68,7 +70,8 @@
     "zod": "^3.24.1",
     "puppeteer": "^21.0.0",
     "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^21.0.0"
+    "puppeteer-core": "^21.0.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^22",
