--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/src/index.js",
     "start:dev": "ts-node src/index.ts",
     "test": "node test-api.ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "express": "^4.18.2",
