--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.0"
   },
-  "engines": {
-    "node": ">=18.0.0"
+ "engines": {
+    "node": "20.x"
   }
 }
