--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "morgan": "^1.10.0",
     "puppeteer": "^21.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.23",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
+    "@types/node": "^20.19.19",
     "nodemon": "^3.0.0",
-    "ts-node": "^10.9.0"
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   },
- "engines": {
+  "engines": {
     "node": "20.x"
   }
 }
